@@ -2213,6 +2213,56 @@
             },
          ],
       },
+      {  name => 'InnoDB Row Lock Time',
+         base_value => '1000',
+         hash  => 'hash_00_VER_25558500b914575a5f7cacb0e0c82bd2',
+         dt         => {
+            input => 'Get MySQL Stats',
+            hash  => 'hash_01_VER_83f813891e18ed42e331ef7cd682d474',
+            Innodb_row_lock_time => {
+               data_source_type_id => '3',
+               hash => 'hash_08_VER_909fee37ccf2e893b172764108d31d67',
+            },
+         },
+         items => [
+            {  item   => 'Innodb_row_lock_time',
+               color  => 'B11D03',
+               type   => 'AREA',
+               hashes => [
+                  'hash_10_VER_09d5a92cddcf555b3a605f99f969a7c3',
+                  'hash_10_VER_1514a8e60cac9321ec9ba75f00aff6d4',
+                  'hash_10_VER_051f0bf2bf7896e65a15882cc188f762',
+                  'hash_10_VER_a0bb69c2e8bfaba0f4fb5e3e136189a5',
+               ],
+               task => 'hash_09_VER_06c76827f197fe5906b9b38aea69b04a',
+            },
+         ],
+      },
+      {  name => 'InnoDB Row Lock Waits',
+         base_value => '1000',
+         hash  => 'hash_00_VER_951d0da8402de1777055e6cfa1263223',
+         dt         => {
+            input => 'Get MySQL Stats',
+            hash  => 'hash_01_VER_0b41e8d256dab573f93033872776c1fc',
+            Innodb_row_lock_waits => {
+               data_source_type_id => '3',
+               hash => 'hash_08_VER_d4c55ecaa28a3ad72047b4d40fe24625',
+            },
+         },
+         items => [
+            {  item   => 'Innodb_row_lock_waits',
+               color  => 'E84A5F',
+               type   => 'AREA',
+               hashes => [
+                  'hash_10_VER_41c307b4150367e1b515d4092cf8cbe5',
+                  'hash_10_VER_d196883fe87483d62fb166350e93d9b1',
+                  'hash_10_VER_df29e81a5bbc8d86b69072795f77d917',
+                  'hash_10_VER_4a40ff78e1260c95037083f4337fac1d',
+               ],
+               task => 'hash_09_VER_119877e8feaa8a503664e84d5a8c2b51',
+            },
+         ],
+      },
       {  name => 'InnoDB Semaphore Waits',
          base_value => '1000',
          hash  => 'hash_00_VER_378214e2d27e60757ce20726588f289d',
@@ -2961,6 +3011,8 @@
             Key_buf_bytes_unflushed    => 'hash_07_VER_7000de3d1c2c39b2de8f416f19deafb9',
             Key_buf_bytes_used         => 'hash_07_VER_5b82c29de4b0d8eaeb84ed8c301cebf2',
             key_buffer_size            => 'hash_07_VER_1a2d33907bf06696b69cb8e15115f689',
+            Innodb_row_lock_waits      => 'hash_07_VER_6ba64246ba233acdff5692b25802bcf7',
+            Innodb_row_lock_time       => 'hash_07_VER_aef4b672de23f6d675ea45b6fd0fd5dc',
          },
          type_id => 1
       },
